--- a/Codigo/AkuavidaJPA/pom.xml
+++ b/Codigo/AkuavidaJPA/pom.xml
@@ -38,5 +38,10 @@
             <artifactId>javax.persistence</artifactId>
             <version>2.1.0</version>
         </dependency>
+        <dependency>
+	<groupId>log4j</groupId>
+	<artifactId>log4j</artifactId>
+	<version>1.2.17</version>
+        </dependency>
     </dependencies>
 </project>
